--- a/template/404.html
+++ b/template/404.html
@@ -4,6 +4,8 @@ Page Not Found
 {% endblock title %}
 
 {% block body %}
-<h1>404 - Page Not Found</h1>
-<p>Sorry, the page you are looking for might be in another castle.</p>
+<script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
+<div style="display: flex;width: 100%;height: 80vh;justify-content: center;align-items: center;">
+    <dotlottie-player src="https://lottie.host/16d2055a-75f7-46b8-a55e-fc6c2483a1ae/4OU6QX0sbD.json" background="transparent" speed="1" style="width:100%;" loop autoplay></dotlottie-player>
+</div>
 {% endblock body %}
