--- a/template/store/product_detail.html
+++ b/template/store/product_detail.html
@@ -129,7 +129,7 @@
                 <div class="carousel-inner">
                     {% for media in product.media_set.all %}
                         <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                            <img src="{{ media.media_url }}" class="d-block w-100 img-fluid" alt="Thumbnail" data-bs-target="#main-carousel{{ product.id }}" data-bs-slide-to="{{ forloop.index }}">
+                            <img src="/{{ media.media_url }}" class="d-block w-100 img-fluid" alt="Thumbnail" data-bs-target="#main-carousel{{ product.id }}" data-bs-slide-to="{{ forloop.index }}">
                         </div>
                     {% endfor %}
                 </div>
@@ -145,7 +145,7 @@
                 <div class="carousel-indicators" style="margin-bottom: -20px;">
                     {% for media in product.media_set.all %}
                         <button type="button" data-bs-target="#mini-carousel{{ product.id }}" data-bs-slide-to="{{ forloop.index }}" {% if forloop.first %}class="active"{% endif %} aria-label="Slide {{ forloop.index }}" style="width: 100px;">
-                            <img style="max-height: 5rem;" class="d-block card" src="{{ media.media_url }}" alt="Thumbnail">
+                            <img style="max-height: 5rem;" class="d-block card" src="/{{ media.media_url }}" alt="Thumbnail">
                         </button>
                     {% endfor %}
                 </div>
